<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wizard_deepskylog_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.deepskylog.vela.wizard.DeepskyLogLogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/deepskylog"
        android:id="@+id/imageView6"
        android:contentDescription="@null"
        android:cropToPadding="false" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/deepskyLogIntro"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/deepskyLogLogin"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/loginName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:id="@+id/editText2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/deepskylogSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/holo_green_light"
            android:elevation="0dp"
            android:onClick="deepskyLogSignInOnClick"
            android:text="@string/signin"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp" />

        <Button
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skipButton"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/holo_red_light"
            android:onClick="skipOnClick"
            android:layout_marginStart="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/createDeepskyLogAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deepskylogSignin"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="createAccountOnClick"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp"
            android:id="@+id/button2" />
    </RelativeLayout>

</LinearLayout>
