<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_hardware2"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="org.deepskylog.vela.wizard.Hardware2">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="130dp"
    app:srcCompat="@drawable/encoders"
    android:contentDescription="@null"
    android:id="@+id/imageView3" />

<TextView
    android:text="@string/selectHardware"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/textView2"
    android:gravity="center"
    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

<TextView
    android:text="@string/encodersMotors"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/textView3" />

<Switch
    android:text="@string/digitalSettingCircles"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/encoders"
    android:switchMinWidth="64dp"
    android:clickable = "false"
    android:switchPadding="@dimen/activity_horizontal_margin" />

<Switch
    android:text="@string/motors"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/motors"
    android:switchMinWidth="64dp"
    android:clickable = "false"
    android:switchPadding="@dimen/activity_horizontal_margin" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextHardware"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@android:color/holo_green_light"
        android:visibility="visible"
        android:elevation="0dp"
        android:onClick="buttonOnClick" />
</RelativeLayout>

</LinearLayout>
