<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_startup_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.deepskylog.vela.wizard.Bluetooth"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/arduino"
        android:id="@+id/imageView2"
        android:contentDescription="@null"
        android:cropToPadding="false" />

    <TextView
        android:text="@string/bluetoothWizard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/enableBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enableBluetoothButton"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_above="@+id/connectArduino"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:onClick="enableBluetoothOnClick" />

        <Button
            android:text="@string/connectArduino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectArduino"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/holo_green_light"
            android:visibility="visible"
            android:elevation="0dp"
            android:onClick="arduinoButtonOnClick"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>



</LinearLayout>
